===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    5 Feb 2018
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20180205
Tag Summary: Use manage_externals to get CVMix and MARBL rather than
             svn:externals (see README_EXTERNALS for details)

Testing:     Ensure code still builds and runs with new externals

 M      .
A       Externals.cfg
A       Externals_POP.cfg
A       README_EXTERNALS
D       SVN_EXTERNAL_DIRECTORIES
A       externals
A       externals/manage_externals
A       externals/manage_externals/.dir_locals.el
A       externals/manage_externals/.git
A       externals/manage_externals/.git/HEAD
A       externals/manage_externals/.git/branches
A       externals/manage_externals/.git/config
A       externals/manage_externals/.git/description
A       externals/manage_externals/.git/hooks
A       externals/manage_externals/.git/hooks/applypatch-msg.sample
A       externals/manage_externals/.git/hooks/commit-msg.sample
A       externals/manage_externals/.git/hooks/post-update.sample
A       externals/manage_externals/.git/hooks/pre-applypatch.sample
A       externals/manage_externals/.git/hooks/pre-commit.sample
A       externals/manage_externals/.git/hooks/pre-push.sample
A       externals/manage_externals/.git/hooks/pre-rebase.sample
A       externals/manage_externals/.git/hooks/pre-receive.sample
A       externals/manage_externals/.git/hooks/prepare-commit-msg.sample
A       externals/manage_externals/.git/hooks/update.sample
A       externals/manage_externals/.git/index
A       externals/manage_externals/.git/info
A       externals/manage_externals/.git/info/exclude
A       externals/manage_externals/.git/logs
A       externals/manage_externals/.git/logs/HEAD
A       externals/manage_externals/.git/logs/refs
A       externals/manage_externals/.git/logs/refs/heads
A       externals/manage_externals/.git/logs/refs/heads/master